<resources>
    <string name="app_name">Calculator</string>
    <string name="display">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="multiplication">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="subtraction">\u2212</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
</resources>